@@ -1,3 +1,14 @@
+2009-04-21  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/bond.cpp (SetLength): Fix bug uncovered by Marshall
+	Levesque. When two atoms are at the same position, move slightly
+	to prevent invalid (NaN) coordinates.
+
+2009-04-14  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/formats/qchemformat.cpp (ReadMolecule): Fix tokenize mistake
+	when reading Q-Chem vibrational intensities.
+
 2009-04-11  Michael Banck  <mbanck@gmx.net>
 
 	* src/formats/outformat.cpp (ReadMolecule): Added MOLPRO output
